# swzplot

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  demo.cpp  swzaxes.cpp  swzglut.cpp  swzline.cpp  swzpatch.cpp  swzplot.cpp  swzplot.hpp  swzsurface.cpp
